--- a/css/Styles.css
+++ b/css/Styles.css
@@ -3,6 +3,16 @@ body {
    color: var(--primary-text-color);
    font-family: "Roboto", "Raleway", "Oleo Script", sans-serif; 
 }
+
+h1,
+h2,
+h3,
+p,
+ul {
+    padding: 0;
+    margin: 0;
+}
+
 .list{
    list-style: none;  
 }
@@ -39,9 +49,12 @@ body {
 
 .container {
     width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0 15px;
     margin: 0 auto;
+}
+
+.section {
+    padding: 94px 0;
 }
 
 .logo {
@@ -93,12 +106,14 @@ body {
     background-color: var(--section-fon-color);
     }
 .hero-title{
+    margin-bottom: 30px;
     color: var(--primary-white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+
 }
 .button  {
     color: var(--primary-white-color);
@@ -108,7 +123,9 @@ body {
     font-size: 16px;
     line-height: 1.875;
     letter-spacing: 0.06em;
-    cursor: pointer; 
+    cursor: pointer;
+    padding: 10px 32px; 
+    border-radius: 4px;
   }
 
 .button:hover,      
@@ -132,6 +149,7 @@ body {
   }
 /* features */
 .features-title {
+    margin-bottom: 10px;
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 14px;
@@ -190,6 +208,7 @@ body {
 /* footer */
 .footer {
    background-color: var(--section-fon-color);
+   margin: 0;
 }
 
 .logo-footer {
@@ -238,6 +257,8 @@ body {
     font-size: 16px;
     line-height: 1.625;
     letter-spacing: 0.03em;
+    padding: 6px 22px;
+    border-radius: 4px;
 }
 
 .filter .filter-button:hover,
@@ -250,6 +271,7 @@ body {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin-bottom: 4px;
  }
  
 .product {
