--- a/css/Styles.css
+++ b/css/Styles.css
@@ -60,6 +60,11 @@ ul {
     padding: 94px 0;
 }
 
+.main-nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
 .logo {
     color: var(--secondary-text-color);
     font-family: 'Raleway';
@@ -71,6 +76,7 @@ ul {
 }
 
 .logo-text {
+    display: inline-block;
     color: var(--accent-color);
 }
 /* site-nav */
@@ -93,6 +99,7 @@ ul {
 }
 .site-nav {
     display: flex;
+    margin-left: 93px;
 }
 .site-nav .nav:not(:last-child) {
     margin-right: 50px;
@@ -105,6 +112,7 @@ ul {
 
 .contacts {
     display: flex;
+    margin-left: auto;
 }
 
 .contacts .contact:not(:last-child) {
@@ -115,7 +123,7 @@ ul {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
-    
+
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 14px;
