--- a/css/Styles.css
+++ b/css/Styles.css
@@ -57,9 +57,11 @@ img {
     }
 
 .container {
-    width: 1200px;
-    padding: 0 15px;
-    margin: 0 auto;
+    width: 1230px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .section {
@@ -70,6 +72,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-bottom: 1px solid #ECECEC;
     }
 .logo {
     color: var(--secondary-text-color);
@@ -86,6 +89,8 @@ img {
     display: inline-block;
     color: var(--accent-color);
        }
+
+          
 /* site-nav */
 .link {
     display: block;
@@ -257,6 +262,7 @@ img {
 
 .items-team {
     display: flex;
+    border: 1px;
 }
 
 .items-team  .team-image:not(:last-child) {
@@ -265,7 +271,8 @@ img {
 
 .card {
     padding: 30px 70px;
-}
+    border-radius: 0px 0px 4px 4px;
+    }
 
 
 
@@ -283,12 +290,11 @@ img {
     font-size: 16px;
     line-height: 1.187;
     letter-spacing: 0.03em;
-
-}
+    }
 
 .team-image {
     background-color: var(--primary-white-color);
-    border: 1px;
+    
     }
 
 /* footer */
@@ -393,14 +399,24 @@ img {
 .products {
     display: flex;
     flex-wrap: wrap;
+}   
+
+.product-image {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    
 }
 
 .product-image:ntn-child(3n) {
-margin: 0;
+    margin-right: 0;
+}
 
+.product-image:ntn-last-child(-n+3) {
+    margin-bottom: 0;
+    border: 1px #EEEEEE;
 }
 
 .box {
-margin-right: 30;
+padding: 20px 24px;
 }
  
