--- a/css/Styles.css
+++ b/css/Styles.css
@@ -153,7 +153,7 @@ img {
 .hero {
     background-color: var(--section-fon-color);
     text-align: center;
-    }
+        }
 .hero-title{
     margin-bottom: 30px;
 
@@ -265,16 +265,13 @@ img {
     border: 1px;
 }
 
-.items-team  .team-image:not(:last-child) {
-    margin-right: 30px;
+.items-team  .team-image + .team-image {
+    margin-left: 30px;
 }
 
 .card {
-    padding: 30px 70px;
-    border-radius: 0px 0px 4px 4px;
-    }
-
-
+    padding: 30px;
+        }
 
 .title {
     margin-bottom: 10px;
@@ -294,6 +291,8 @@ img {
 
 .team-image {
     background-color: var(--primary-white-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
     
     }
 
@@ -407,16 +406,20 @@ img {
     
 }
 
-.product-image:ntn-child(3n) {
+.product-image:nth-child(3n) {
     margin-right: 0;
 }
 
-.product-image:ntn-last-child(-n+3) {
+.product-image:nth-last-child(-n+3) {
     margin-bottom: 0;
-    border: 1px #EEEEEE;
+    
 }
 
 .box {
 padding: 20px 24px;
+border: 1px solid #EEE;
+border-top: 0;
+
+
 }
  
